--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,9 +45,20 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Entities\Enemy\CollisionTrigger.cs" />
+     <Compile Include="Assets\Entities\Enemy\Enemy Bullet\EnemyBullet.cs" />
+     <Compile Include="Assets\Entities\Enemy\Enemy.cs" />
+     <Compile Include="Assets\Entities\EnemyFormation\FormationBullet.cs" />
+     <Compile Include="Assets\Entities\EnemyFormation\Position.cs" />
+     <Compile Include="Assets\Entities\EnemyFormation\SpawnEnemyFormation.cs" />
+     <Compile Include="Assets\Entities\Player\Bullet\PlayerBullet.cs" />
+     <Compile Include="Assets\Entities\Player\Player.cs" />
+     <Compile Include="Assets\Entities\Player\PlayerCollisionTrigger.cs" />
+     <Compile Include="Assets\Scripts\Bullet.cs" />
+     <Compile Include="Assets\Scripts\BulletDestroyer.cs" />
      <Compile Include="Assets\Scripts\LevelManager.cs" />
      <Compile Include="Assets\Scripts\MusicPlayer.cs" />
-     <Compile Include="Assets\Scripts\ShipController.cs" />
+     <Compile Include="Assets\Scripts\Ship.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
