--- a/Lazer Defender.CSharp.csproj
+++ b/Lazer Defender.CSharp.csproj
@@ -76,6 +76,7 @@
     <Compile Include="Assets\Scripts\BulletDestroyer.cs" />
     <Compile Include="Assets\Scripts\LevelManager.cs" />
     <Compile Include="Assets\Scripts\MusicPlayer.cs" />
+    <Compile Include="Assets\Scripts\ScoreKeeper.cs" />
     <Compile Include="Assets\Scripts\Ship.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\SyntaxTree\UnityVS\2015\UnityVS.CSharp.targets" />
