Added flare effect to the enemy and player after shot. Build problems were encountered.

--- a/Lazer Defender.CSharp.csproj
+++ b/Lazer Defender.CSharp.csproj
@@ -13,11 +13,13 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile></CompilerResponseFile>
+    <CompilerResponseFile>
+    </CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>WebGL:20</UnityBuildTarget>
     <UnityVersion>5.3.4f1</UnityVersion>
-    <RootNamespace></RootNamespace>
+    <RootNamespace>
+    </RootNamespace>
     <LangVersion Condition=" '$(VisualStudioVersion)' != '10.0' ">4</LangVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
@@ -66,7 +68,6 @@
     <Compile Include="Assets\Entities\Enemy\CollisionTrigger.cs" />
     <Compile Include="Assets\Entities\Enemy\Enemy Bullet\EnemyBullet.cs" />
     <Compile Include="Assets\Entities\Enemy\Enemy.cs" />
-    <Compile Include="Assets\Entities\EnemyFormation\FormationBullet.cs" />
     <Compile Include="Assets\Entities\EnemyFormation\Position.cs" />
     <Compile Include="Assets\Entities\EnemyFormation\SpawnEnemyFormation.cs" />
     <Compile Include="Assets\Entities\Player\Bullet\PlayerBullet.cs" />
